--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <table cellspacing="20">
-        <td><img src="https://media.licdn.com/dms/image/C4D03AQEVv0AoADj2bg/profile-displayphoto-shrink_800_800/0/1639902651191?e=2147483647&v=beta&t=qGVjEUaulzdzUSebbfDD-yetgfn83CRj8aqv3n2cN20"
-                alt="Utsav's profile pic" width="140" height="150"></td>
+<!--         <td><img src="https://media.licdn.com/dms/image/C4D03AQEVv0AoADj2bg/profile-displayphoto-shrink_800_800/0/1639902651191?e=2147483647&v=beta&t=qGVjEUaulzdzUSebbfDD-yetgfn83CRj8aqv3n2cN20" -->
+<!--                 alt="Utsav's profile pic" width="140" height="150"></td> -->
         <td>
             <h1>Utsav Dubey</h1>
             <p><em>founder and CTO of <strong><a href="https://appbrewery.com/">The App Brewery</a></strong></em></p>
